@@ -1,3 +1,7 @@
+2002-02-13  Matt Fredette  <fredette@netbsd.org>
+
+	* m68k.h (EF_M68000): Define.
+
 2002-02-12  Alan Modra  <amodra@bigpond.net.au>
 
 	* ppc.h (DT_PPC64_OPD, DT_PPC64_OPDSZ): Define.
